fix navbar logout on smaller screen

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -51,6 +51,10 @@
     display: none;
 }
 
+#logOut2 {
+    cursor: pointer;
+}
+
 /* Footer Section */
 .footer-section {
     background-color: #94daff;
